# fastht_tailwind

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: deploy.yml
fastht_tailwind/: __init__.py  modal.py  tailwind.py
