[metadata]
name = fastht_tailwind
version = 1.0.0
author = Your Name
author_email = your.email@example.com
description = Base package for FastHT using Tailwind.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/yourusername/fastht_tailwind
project_urls =
    Bug Tracker = https://github.com/yourusername/fastht_tailwind/issues

[options]
packages = find:
python_requires = >=3.7

[options.extras_require]
fastht_flowbite = fastht_flowbite>=1.0.0